--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -80,14 +80,49 @@ body {
 
 
 /*--- 文字部分 ---*/
-.main{
+.s1 .main{
     position: absolute;
     top: 30%;
 }
-.main img:nth-of-type(1){
+.s1 .main img:nth-of-type(1){
     width: 40%;
-
 }
-.main img:nth-of-type(2){
+.s1 .main img:nth-of-type(2){
     width: 80%;
+    margin-bottom: 20px;
+}
+.s1 .main .img9{
+    background: url("../img/9.png");
+    background-size: cover;
+    width: 207px;
+    height: 24px;
+    margin: auto;
+}
+
+
+
+.s1 .footer{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: 70px;
+}
+.s1 .footer h2{
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: #00d7b2;
+}
+.s1 .footer p:nth-of-type(1){
+    font-size: 16px;
+    margin-bottom: 40px;
+    color: #00d7b2;
+}
+.s1 .footer p:nth-of-type(2){
+    height: 70px;
+    position: absolute;
+}
+.s1 .footer img{
+    height: 70px;
+    position: absolute;
+    left: -80px;
 }
