--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -78,7 +78,7 @@ body {
     width: 50px;
     right: 50px;
     bottom: 210px;
-    animation-iteration-count:infinite;
+
 }
 .s1 .header img:nth-of-type(5){
     left: 50%;
@@ -87,7 +87,9 @@ body {
     margin-left: -30%;
     animation-iteration-count:infinite; /* 一直轮播 */
 }
-
+.swing{
+    transform-origin:center;
+}
 
 /*--- 文字部分 ---*/
 .s1 .main{
