--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -29,6 +29,34 @@ body {
 
 }
 
+/* 背景音乐 */
+#mp3btn{
+    position: absolute;
+    top:5%;
+    right: 5%;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    z-index: 100;
+    text-align: center;
+    line-height: 37px;
+    background: rgba(117, 117, 117, 0.58);
+    border: 5px rgba(175, 175, 175, 0.3) solid;
+    animation: mp3key 2s linear infinite;
+}
+#mp3btn img{
+    width: 14px;
+}
+@keyframes mp3key {
+    0%{
+        transform: rotateZ(0deg);
+    }
+    100%{
+        transform: rotateZ(360deg);
+    }
+}
+
+
 /*自定义样式  - 开始*/
 
 /*向下翻页的按钮*/
