--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -59,6 +59,59 @@ body {
 
 /*自定义样式  - 开始*/
 
+
+/*--- h2 samll通用样式 ---*/
+.s2 h2,.s3 h2{
+    padding-top: 60px;
+}
+.s2 h2::before,.s3 h2::before{
+    content: '';
+    background: url("../img/14.png");
+    background-size: cover;
+    width: 83px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 20px;
+    animation: s2before 3s linear infinite;
+}
+@keyframes s2before {
+    0%{
+        margin-right: 10px;
+    }
+    50%{
+        margin-right: 30px;
+    }
+    100%{
+        margin-right: 10px;
+    }
+}
+.s2 h2::after,.s3 h2::after{
+    content: '';
+    background: url("../img/13.png");
+    background-size: cover;
+    width: 83px;
+    height: 20px;
+    display: inline-block;
+    margin-left: 20px;
+    animation: s2after 3s linear infinite;
+}
+@keyframes s2after {
+    0%{
+        margin-left:10px;
+    }
+    50%{
+        margin-left:30px;
+    }
+    100%{
+        margin-left:10px;
+    }
+}
+.s2 small,.s3 small{
+    letter-spacing:5px;
+    font-size: 10px;
+}
+
+
 /*向下翻页的按钮*/
 .swiper-button-next {
     position: absolute;
@@ -73,7 +126,7 @@ body {
 
 /* .s1*/
 
-.s1,.s2{
+.s1,.s2,.s3{
     background: url("../img/bj.png");
     height: 100%;
 }
@@ -140,7 +193,7 @@ body {
 }
 
 
-.s1 .footer,.s2 .footer{
+.s1 .footer,.s2 .footer,.s3 .footer{
     position: absolute;
     left: 0;
     width: 100%;
@@ -161,7 +214,7 @@ body {
     position: absolute;
     animation-iteration-count:infinite;
 }
-.s1 .footer img,.s2 .footer img{
+.s1 .footer img,.s2 .footer img,.s3 .footer img{
     height: 70px;
     position: absolute;
     left: -80px;
@@ -172,55 +225,6 @@ body {
 /*--- s2 ---*/
 .s2{
     color: #00d7b2;
-}
-.s2 h2{
-    padding-top: 60px;
-}
-.s2 h2::before{
-    content: '';
-    background: url("../img/14.png");
-    background-size: cover;
-    width: 83px;
-    height: 20px;
-    display: inline-block;
-    margin-right: 20px;
-    animation: s2before 3s linear infinite;
-}
-@keyframes s2before {
-    0%{
-        margin-right: 10px;
-    }
-    50%{
-        margin-right: 30px;
-    }
-    100%{
-        margin-right: 10px;
-    }
-}
-.s2 h2::after{
-    content: '';
-    background: url("../img/13.png");
-    background-size: cover;
-    width: 83px;
-    height: 20px;
-    display: inline-block;
-    margin-left: 20px;
-    animation: s2after 3s linear infinite;
-}
-@keyframes s2after {
-    0%{
-        margin-left:10px;
-    }
-    50%{
-        margin-left:30px;
-    }
-    100%{
-        margin-left:10px;
-    }
-}
-.s2 small{
-    letter-spacing:5px;
-    font-size: 10px;
 }
 .s2 .main{
     background: url("../img/12.png");
@@ -268,5 +272,129 @@ body {
     font-weight: 800;
     border-radius: 12px;
     text-align: center;
+}
+
+
+
+
+/*--- s3 ---*/
+.s3{
+    color: #00d7b2;
+}
+.s3 .main span:nth-of-type(1){
+    position: absolute;
+    top: 45%;
+    left:40%;
+    font-size: 24px;
+}
+.s3 .main span:nth-of-type(2){
+    position: absolute;
+    top: 30%;
+    left:25%;
+    font-size: 18px;
+}
+.s3 .main span:nth-of-type(3){
+    position: absolute;
+    top: 45%;
+    left:10%;
+    font-size: 18px;
+}
+.s3 .main span:nth-of-type(4){
+    position: absolute;
+    top: 60%;
+    left:25%;
+    font-size: 18px;
+}
+.s3 .main span:nth-of-type(5){
+    position: absolute;
+    top: 60%;
+    left: 66%;
+    font-size: 18px;
+}
+.s3 .main span:nth-of-type(6){
+    position: absolute;
+    top: 45%;
+    right: 10%;
+    font-size: 18px;
+}
+.s3 .main span:nth-of-type(7){
+    position: absolute;
+    top: 30%;
+    right: 25%;
+    font-size: 18px;
+}
+.s3 .main img:nth-of-type(1){
+    position: absolute;
+    top: 38%;
+    left: 34%;
+    font-size: 24px;
+    width: 130px;
+    height: 130px;
+}
+.s3 .main img:nth-of-type(2){
+    position: absolute;
+    top: 26%;
+    left: 20%;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main img:nth-of-type(3){
+    position: absolute;
+    top: 41%;
+    left: 5%;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main img:nth-of-type(4){
+    position: absolute;
+    top: 56%;
+    left: 20%;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main img:nth-of-type(5){
+    position: absolute;
+    top: 57%;
+    left: 61%;;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main img:nth-of-type(6){
+    position: absolute;
+    top: 42%;
+    right: 5%;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main img:nth-of-type(7){
+    position: absolute;
+    top: 26%;
+    right: 19%;
+    width: 75px;
+    height: 75px;
+}
+.s3 .main .xxbgm{
+    width: 200px;
+    height: 200px;
+    animation: xxbgm 8s infinite;
+    position: absolute;
+    top: 33%;
+    left: 26%;
+}
+.s3 .main .xbgm{
+    width: 300px;
+    height: 300px;
+    animation: xxbgm 10s infinite;
+    position: absolute;
+    top: 26%;
+    left: 10%;
+}
+@keyframes xxbgm {
+    0%{
+        transform:rotateZ(0deg);
+    }
+    100%{
+        transform:rotateZ(360deg);
+    }
 }
 
