--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -60,11 +60,17 @@ body {
 /*自定义样式  - 开始*/
 
 
+
+/*  背景 */
+.s1,.s2,.s3,.s4{
+    background: url("../img/bj.png");
+    height: 100%;
+}
 /*--- h2 samll通用样式 ---*/
-.s2 h2,.s3 h2{
+.s2 h2,.s3 h2,.s4 h2{
     padding-top: 60px;
 }
-.s2 h2::before,.s3 h2::before{
+.s2 h2::before,.s3 h2::before,.s4 h2::before{
     content: '';
     background: url("../img/14.png");
     background-size: cover;
@@ -85,7 +91,7 @@ body {
         margin-right: 10px;
     }
 }
-.s2 h2::after,.s3 h2::after{
+.s2 h2::after,.s3 h2::after,.s4 h2::after{
     content: '';
     background: url("../img/13.png");
     background-size: cover;
@@ -106,7 +112,7 @@ body {
         margin-left:10px;
     }
 }
-.s2 small,.s3 small{
+.s2 small,.s3 small,.s4 small{
     letter-spacing:5px;
     font-size: 10px;
 }
@@ -116,21 +122,30 @@ body {
 .swiper-button-next {
     position: absolute;
     top: auto;
-    bottom: 3%;
+    bottom: 2%;
     left: 50%;
     right: auto;
     margin-left: -13.5px;
     transform: rotateZ(-90deg);
+    width: 17px;
+    height: 34px;
+    cursor: pointer;
+    background-size: 17px 34px;
+    animation: footbutton 2s infinite;
+}
+@keyframes footbutton {
+    0%{
+        bottom: 2%;
+        opacity: 1;
+    }
+    100%{
+        bottom: 5%;
+        opacity: 0;
+    }
 }
 
 
 /* .s1*/
-
-.s1,.s2,.s3{
-    background: url("../img/bj.png");
-    height: 100%;
-}
-
 .s1 .header img{
     position: absolute;
 }
@@ -326,10 +341,10 @@ body {
 .s3 .main img:nth-of-type(1){
     position: absolute;
     top: 38%;
-    left: 34%;
+    left: 36%;
     font-size: 24px;
-    width: 130px;
-    height: 130px;
+    width: 120px;
+    height: 120px;
 }
 .s3 .main img:nth-of-type(2){
     position: absolute;
@@ -340,7 +355,7 @@ body {
 }
 .s3 .main img:nth-of-type(3){
     position: absolute;
-    top: 41%;
+    top: 42%;
     left: 5%;
     width: 75px;
     height: 75px;
@@ -354,8 +369,8 @@ body {
 }
 .s3 .main img:nth-of-type(5){
     position: absolute;
-    top: 57%;
-    left: 61%;;
+    top: 56%;
+    left: 61%;
     width: 75px;
     height: 75px;
 }
@@ -397,4 +412,84 @@ body {
         transform:rotateZ(360deg);
     }
 }
+
+.s3 .text{
+    position: absolute;
+    left: 10%;
+    bottom: 20%;
+    width: 80%;
+    height: 50px;
+    font-size: 16px;
+    text-align: left;
+}
+.s3 .text span{
+    display: block;
+    height: 35px;
+    width: 3px;
+    background: #00d7b2;
+    position: absolute;
+    left: -4%;
+    bottom: 20%;
+}
+
+
+
+
+/*--- s4 ---*/
+.s4{
+    color: #00d7b2;
+}
+.s4 .main{
+    position: relative;
+}
+.s4 .main1{
+    position: absolute;
+    width: 80%;
+    left: 50%;
+    margin-left: -40%;
+}
+.s4 .main1 img{
+    /*width: 70%;*/
+}
+.s4 .main > img:nth-of-type(1){
+    width: 80%;
+    margin-top: 5%;
+    position: absolute;
+    left: 50%;
+    margin-left: -40%;
+}
+.s4 .text1 img:nth-of-type(1){
+
+}
+.s4 .text1 img:nth-of-type(2){
+
+}
+.s4 .text1 a:nth-of-type(1){
+    position: absolute;
+    top:21.5%;
+    left: 33%;
+}
+.s4 .text1 a:nth-of-type(2){
+    position: absolute;
+    top:21.5%;
+    left: 60%;
+    color: #00baff;
+}
+.s4 .text2 img:nth-of-type(1){
+    width: 20px;
+    position: absolute;
+    top: 28%;
+    left: 14%;
+    animation: s4text2jt 1s ease alternate infinite;
+}
+@keyframes s4text2jt {
+    0%{
+        left: 14%;
+    }
+    100%{
+        left: 16%;
+    }
+}
+
+
 
