--- a/weichangjing/css/style.css
+++ b/weichangjing/css/style.css
@@ -459,20 +459,26 @@ body {
     margin-left: -40%;
 }
 .s4 .text1 img:nth-of-type(1){
-
+    width: 30px;
+    position: absolute;
+    top: 70%;
+    left: 15%;
 }
 .s4 .text1 img:nth-of-type(2){
-
+    width: 30px;
+    position: absolute;
+    top:70%;
+    right: 37%;
 }
 .s4 .text1 a:nth-of-type(1){
     position: absolute;
-    top:21.5%;
-    left: 33%;
+    top: 70%;
+    left: 25%;
 }
-.s4 .text1 a:nth-of-type(2){
+.s4 .text1a{
     position: absolute;
-    top:21.5%;
-    left: 60%;
+    top:70%;
+    left: 63%;
     color: #00baff;
 }
 .s4 .text2 img:nth-of-type(1){
