--- a/yaoqinghan/css/style.css
+++ b/yaoqinghan/css/style.css
@@ -88,3 +88,73 @@ body {
     top: 65%;
     left: 42%;
 }
+.s1 .main h2{
+    color: rgba(240, 133, 0, 0.95);
+    position: absolute;
+    bottom:10%;
+    left: 33%;
+}
+.s1 .main p{
+    color: rgb(249, 172, 76);
+    position: absolute;
+    bottom: 5%;
+    left: 41%;
+}
+.s1 .main .mainimg1{
+    position: absolute;
+    left: 31%;
+    top: 91%;
+}
+.s1 .main .mainsmall1{
+    width: 6%;
+    position: absolute;
+    top: 92%;
+    left: 34%;
+}
+.s1 .main .mainsmall2{
+    width: 6%;
+    position: absolute;
+    top:92%;
+    left:61%;
+}
+
+
+
+/*--- s2 ---*/
+.s2{
+    background: url("../img/big4_02.png");
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+}
+.s2 .lamp{
+    position: absolute;
+    width: 85%;
+    left: 5%;
+    top: -5%;
+}
+.s2 .main h1{
+    color: #f4ba3e;
+    margin-top: 15%;
+}
+.s2 .main img:nth-of-type(1){
+    width: 70%;
+    position: absolute;
+    top: 8.5%;
+    left: 18%;
+}
+.s2 .main img:nth-of-type(2){
+    width: 10%;
+    position: absolute;
+    top: 10.5%;
+    left: 19%;
+}
+.s2 .main img:nth-of-type(3){
+    width: 10%;
+    position: absolute;
+    top: 10.5%;
+    left: 71%;
+}
+.s2 .text img:nth-of-type(1){
+    width: 80%;
+}
