--- a/yaoqinghan/css/style.css
+++ b/yaoqinghan/css/style.css
@@ -44,13 +44,13 @@ body {
 }
 
 /*-- 背景 --*/
-.s2,.s3,.s4{
+.s2,.s3,.s4,.s5{
     background: url("../img/big4_02.png");
     background-size: 100% 100%;
     height: 100%;
     width: 100%;
 }
-.s2 .lamp,.s3 .lamp,.s4 .lamp{
+.s2 .lamp,.s3 .lamp,.s4 .lamp,.s5 .lamp{
     position: absolute;
     width: 85%;
     left: 5%;
@@ -213,3 +213,38 @@ body {
 }
 
 /*--- s4 ---*/
+.s4 .hot img:nth-of-type(1){
+    position: absolute;
+    top:20%;
+    left: 10%;
+    height: 60%;
+    width: 60%;
+}
+.s4 .hot img:nth-of-type(2){
+    position: absolute;
+    top:25%;
+    right: 20%;
+    height: 60%;
+    width: 60%;
+}
+.s4 .hot img:nth-of-type(3){
+    position: absolute;
+    top:30%;
+    left: 30%;
+    height: 60%;
+    width: 60%;
+}
+.s4 .hot img:nth-of-type(4){
+    position: absolute;
+    top:35%;
+    left: 20%;
+    height: 60%;
+    width: 60%;
+}
+.s4 .hot img:nth-of-type(5){
+    position: absolute;
+    top:40%;
+    left: 13%;
+    height: 60%;
+    width: 60%;
+}
